test/resources/invalid/parse/InvalidImportNoName.flo
import './UrlsImport';

action STUB_ACTION = stub();

flow MY_FLOW = {
    any myAny = ['a', 'b', 'c'];
    STUB_ACTION >> myAny;
}